tests/render_snapshots/snapshots/render_snapshots__overlays__sql_modal_plan_tab_with_plan_text.snap
---
source: tests/render_snapshots/overlays.rs
expression: output
---
test_project | - | - | no dsn | localhost:5432/test                             
┌ [1] Explorer ────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                 
│ Press 'r' to load│┌ [2] Inspector ───────────────────────────────────────────┐
│                  ││(select a table)                                          │
│                  ││                                                          │
│       ╭ SQL Editor ── [SQL] [Plan] [Compare] ────────────────────────╮       │
│       │ EXPLAIN (0.04s)                                              │       │
│       │                                                              │       │
│       │                                                              │       │
│       │  Seq Scan on users  (cost=0.00..35.50 rows=2550 width=36)    │       │
│       │  │ Filter: (id > 10)                                         │       │
│       │                                                              │───────┘
│       │                                                              │───────┐
│       │                                                              │       │
│       │                                                              │       │
│       │                                                              │       │
│       │ ──────────────────────────────────────────────────────────── │       │
│       │  [NORMAL]                                             Ready  │       │
│       ╰ ^E: Explain │ b: Pin │ ↑↓: Scroll │ Tab: Switch │ Esc: Close ╯       │
│                  ││                                                          │
│                  ││                                                          │
└──────────────────┘└──────────────────────────────────────────────────────────┘
