tests/render_snapshots/snapshots/render_snapshots__overlays__sql_modal_success_select.snap
---
source: tests/render_snapshots/overlays.rs
expression: output
---
test_project | - | - | no dsn | localhost:5432/test                             
┌ [1] Explorer ────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                 
│ Press 'r' to load│┌ [2] Inspector ───────────────────────────────────────────┐
│                  ││(select a table)                                          │
│                  ││                                                          │
│       ╭ SQL Editor ── [SQL] [Plan] ──────────────────────────────────╮       │
│       │ SELECT * FROM users                                          │       │
│       │                                                              │       │
│       │                                                              │       │
│       │                                                              │       │
│       │                                                              │       │
│       │                                                              │───────┘
│       │                                                              │───────┐
│       │                                                              │       │
│       │                                                              │       │
│       │                                                              │       │
│       │ ──────────────────────────────────────────────────────────── │       │
│       │  [NORMAL]                                  ✓ 2 rows (0.01s)  │       │
│       ╰ ⌥Enter: Run │ y: Yank │ ^O: Hist │ Enter: Insert │ Esc: Close╯       │
│                  ││                                                          │
│                  ││                                                          │
└──────────────────┘└──────────────────────────────────────────────────────────┘
⌥Enter:Run  ^E:Explain  y:Yank  Enter:Insert  Tab:Plan  Esc:Close
