tests/render_snapshots/snapshots/render_snapshots__overlays__table_picker_cursor_at_head.snap
---
source: tests/render_snapshots/overlays.rs
expression: output
---
test_project | test_db | - | no dsn | localhost:5432/test                       
┌ [1] Explorer ────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                 
│> public.users    │┌ [2] Inspector ───────────────────────────────────────────┐
│  public.posts    ││(select a table)                                          │
│  public.commen╭ Table Picker ────────────────────────────────╮               │
│               │  > user                                      │               │
│               │▸   public.users                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │───────────────┘
│               │                                              │───────────────┐
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               ╰ 1 tables │ ↑↓ Navigate │ Enter Select ───────╯               │
│                  ││                                                          │
└──────────────────┘└──────────────────────────────────────────────────────────┘
Enter:Select  type:Filter  ↑↓:Navigate  Esc:Close
